--- a/deno.json
+++ b/deno.json
@@ -16,6 +16,7 @@
 	},
     "imports": {
         "@std/expect": "jsr:@std/expect@^1.0.7",
-        "@std/fmt": "jsr:@std/fmt@^1.0.3"
+        "@std/fmt": "jsr:@std/fmt@^1.0.3",
+        "is-what": "npm:is-what@^5.0.2"
     }
 }
